hphp/test/slow/goto/try_goto_in_finally2.php.expectf
Fatal error: 'goto' into finally statement is disallowed in %s/test/slow/goto/try_goto_in_finally2.php on line 3